---
source: src/codegen/tests/initialization_test.rs
expression: result

---
; ModuleID = 'main'
source_filename = "main"

%__prog_a = type { i16 }
%prog_interface = type { %__prog_a }

@__prog_a__init = global %__prog_a zeroinitializer
@prog_instance = global %prog_interface zeroinitializer

define void @prog(%prog_interface* %0) {
entry:
  %a = getelementptr inbounds %prog_interface, %prog_interface* %0, i32 0, i32 0
  ret void
}

